st-widget: Fix st_widget_set_theme

https://bugzilla.gnome.org/show_bug.cgi?id=678737